--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "axios": "^0.27.2",
     "framer-motion": "^6.3.15",
+    "humanize-duration": "^3.27.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
